--- a/listenAndSave/pom.xml
+++ b/listenAndSave/pom.xml
@@ -40,6 +40,11 @@
             <version>1.18.6</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>17.0.0</version>
+        </dependency>
 
     </dependencies>
 </project>
